[project]
name = "visualnav-transformer"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

# This is a minimal pyproject specifying dependencies for uv
dependencies = [
    "numpy==1.26",
    "matplotlib",
    "ipykernel",
    "torch",
    "torchvision",
    "tqdm==4.64.0",
    "opencv-python==4.6.0.66",
    "wandb==0.12.18",
    "rosbag",
    "roslz4",
    "prettytable",
    "efficientnet-pytorch",
    "warmup-scheduler",
    "diffusers==0.11.1",
    "lmdb",
    "vit-pytorch",
    "positional-encodings",
    "pyyaml",
    "rospkg",
    "huggingface-hub==0.25.0",
    "pillow>=10.4.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://rospypi.github.io/simple/"]
